feat: Implement Unified Member Search Domain